@@ -9,13 +9,13 @@ export("?", .DollarNames, CRAN.packages, Rprof, Rprofmem, RShowDoc,
        aspell_package_Rd_files, aspell_package_vignettes,
        aspell_write_personal_dictionary_file, available.packages,
        browseEnv, browseURL, browseVignettes, bug.report,
-       capture.output, checkCRAN, chooseBioCmirror, chooseCRANmirror,
+       capture.output, changedFiles, checkCRAN, chooseBioCmirror, chooseCRANmirror,
        citation, cite, citeNatbib, citEntry, citHeader, citFooter,
        close.socket, combn, compareVersion, contrib.url, count.fields,
        create.post, data, data.entry, dataentry, de, de.ncols,
        de.restore, de.setup, debugger, demo, download.file,
        download.packages, dump.frames, edit, emacs, example,
-       file_test, file.edit, find, fix, fixInNamespace, findLineNum,
+       file_test, file.edit, fileSnapshot, find, fix, fixInNamespace, findLineNum,
        flush.console, formatOL, formatUL, getAnywhere, getCRANmirrors,
        getFromNamespace, getParseData, getParseText, getS3method,
        getSrcDirectory, getSrcFilename, getSrcLocation, getSrcref,
@@ -67,6 +67,8 @@ S3method(head, table)
 S3method(print, "aspell")
 S3method(print, "aspell_inspect_context")
 S3method(print, Bibtex)
+S3method(print, changedFiles)
+S3method(print, fileSnapshot)
 S3method(print, findLineNumResult)
 S3method(print, getAnywhere)
 S3method(print, hsearch)
